+ [core] Added ability for synchronizing databases among servers.
+ [lang] #2843101 Dutch update, thanks to scavenger2008
+ [lang] Galician update, thanks to Xosé Calvo - xosecalvo
+ [export] Added MediaWiki export module,
  thanks to Derek Schaefer - drummingds1
+ [lang] Turkish update, thanks to Burak Yavuz
+ [auth] Add custom port configuration in signon, thanks to Gary Smith

3.2.3.0 (not yet released)
- patch #2856664 [export] Date, time, and datetime column types now export correctly to
  OpenOffice Spreadsheet, thanks to Thomas Pulickal - jemajoign
- patch #2859788 [parser] Double-character delimiters (bug #2846239), 
  thanks to Thomas Pulickal - jemajoign
- bug #2832600 [export] Slow export when having lots of databases
- bug #2537766 [import] Comments are stripped when editing store procedures 
- bug #2852370 [operations] Renaming database deletes triggers 
- bug #2872247 [interface] Failed opening required 'mysql_charsets.lib.php', thanks to CyberLeo Kitsana - cyberleo
- bug [structure] "In use" table incorrectly reported as "view" 

3.2.2.0 (2009-09-13)
- bug #2825293 [structure] Default value for a BIT column
- bug [display] Red arrows were reversed in the list of tables 
- bug #2813879 [export] Duplicate empty lines when exporting without comments 
- bug #2825919 [export] Trigger export with database name 
- bug #2823996 [data] Cannot edit row with no PK and a BIT field 
- bug [export] Exporting results of a query which contains a LIMIT clause
  inside a subquery
- bug #2837722 [export] Run complex SQL then export does not work 
- bug #2839548 [export] Triggers order on export 
- bug #2826986 [display] Order by BLOB and range display 
- bug [display] After clicking on Show Function or Function, the UPDATE query
  is not shown after execution
- bug [structure] Missing validation for BINARY and VARBINARY

3.2.1.0 (2009-08-09)
- bug #2799009 Login with ipv6 IP address breaks redirect
- bug #2796066 [priv] Inconsistent display of databases list