@@ -78,14 +78,6 @@ class PMA_Error extends PMA_Message
     protected $_line = 0;
 
     /**
-     * Holds any variables defined in the context where the error occured
-     * f. e. $this if the error occured in an object method
-     *
-     * @var array
-     */
-    protected $_context = array();
-
-    /**
      * Holds the backtrace for this error
      *
      * @var array
@@ -107,21 +99,18 @@ class PMA_Error extends PMA_Message
      * @uses    PMA_Error::setMessage()
      * @uses    PMA_Error::setFile()
      * @uses    PMA_Error::setLine()
-     * @uses    PMA_Error::setContext()
      * @uses    PMA_Error::setBacktrace()
      * @param   integer $errno
      * @param   string  $errstr
      * @param   string  $errfile
      * @param   integer $errline
-     * @param   array   $errcontext
      */
-    public function __construct($errno, $errstr, $errfile, $errline, $errcontext)
+    public function __construct($errno, $errstr, $errfile, $errline)
     {
         $this->setNumber($errno);
         $this->setMessage($errstr, false);
         $this->setFile($errfile);
         $this->setLine($errline);
-        $this->setContext($errcontext);
 
         $backtrace = debug_backtrace();
         // remove last two calls: debug_backtrace() and handleError()
@@ -140,17 +129,6 @@ class PMA_Error extends PMA_Message
     public function setBacktrace($backtrace)
     {
         $this->_backtrace = $backtrace;
-    }
-
-    /**
-     * sets PMA_Error::$_context
-     *
-     * @uses    PMA_Error::$_context to set it
-     * @param   array $context
-     */
-    public function setContext($context)
-    {
-        $this->_context = $context;
     }
 
     /**
