@@ -42,6 +42,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
   thanks to Derek Schaefer - drummingds1
 + [lang] Turkish update, thanks to Burak Yavuz
 + [auth] Add custom port configuration in signon, thanks to Gary Smith
+- [core] Removed context from the error handler 
 
 3.2.3.0 (not yet released)
 - patch #2856664 [export] Date, time, and datetime column types now export correctly to
